#21 이전 브랜치 연동